--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <source src="Vidéo%20sans%20titre%20‐%20Réalisée%20avec%20Clipchamp.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <p class="mt-10 text-4xl font-bold">Bienvenue sur mon portfolio (v1)</p>
+    <p class="mt-10 text-4xl font-bold">Bienvenue sur mon portfolio</p>
 
 </section>
 
@@ -134,7 +134,7 @@
             <h3 class="ml-10 mb-1 text-lg font-semibold text-gray-900 dark:text-white">CFA Nextech (Pertuis)<span class="ml-5 bg-blue-100 text-blue-800 text-sm font-medium me-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300 ms-3">Dernière en date</span></h3>
             <time class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">De 2022 à 2024</time>
             <p class="text-base font-normal text-gray-500 dark:text-gray-400">Cursus Services Informatiques aux Organisations option Solutions Logicielles et Applications Métier (SIO SLAM).</p>
-            <a href="https://nextechformation.fr/formations/bts-sio-slam/" target="_blank" class="inline-flex mt-5 items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"></svg>Lien vers la page de la formation</a>
+            <a href="https://nextechformation.fr/formations/bts-sio-slam/?tid=MzYy" target="_blank" class="inline-flex mt-5 items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"></svg>Lien vers la page de la formation</a>
         </li>
         <li class="ms-6">
         <span class="absolute flex items-center justify-center w-6 h-6 bg-blue-100 rounded-full -start-3 ring-8 ring-white dark:ring-gray-900 dark:bg-blue-900">
@@ -231,8 +231,25 @@
             <div class="bg-white rounded-lg shadow-lg p-6">
                 <h3 class="text-xl font-semibold mb-4">Application desktop Fast-Sushi</h3>
                 <p>Développement d'une application desktop pour la partie administrateur de notre projet de fin d'année. Crée en HTML, CSS et JavaScript avec le framework Electron-JS.</p>
+                <a href="https://github.com/FAST-SUSHI-NEXTECH/" target="_blank" class="inline-flex mt-5 items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"></svg>Lien vers le repo du projet</a>
             </div>
-            <!-- Ajoutez d'autres projets ici -->
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <h3 class="text-xl font-semibold mb-4">Bot de trading</h3>
+                <p>En utilisant les API de ma plateforme d'exchange ainsi que des librairies pythons, j'ai créé mon propre robot, capable de prendre une stratégie, renseignez dans un fichier et de la mettre en œuvre (achat et vente automatique avec notification).</p>
+            </div>
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <h3 class="text-xl font-semibold mb-4">Script d'automatisation des Contrats d'Accès aux Réseaux Publics de Distribution (CARD)</h3>
+                <p>Création d'un script VBA dont l'utilité est de croisé des données d'un export tiers pour générer un fichier texte prêt à être signé</p>
+            </div>
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <h3 class="text-xl font-semibold mb-4">Configuration d'un réseau de caméra de vidéosurveillance </h3>
+                <p>Lors de l'aménagement d'un nouveau centre de stockage, j'ai été ammener à configurer un réseau de vidéosurveillance, de l'adressage IP jusqu'à la sauvegarde.</p>
+            </div>
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <h3 class="text-xl font-semibold mb-4">Logiciel de Gestion de Parc Informatique (GLPI)</h3>
+                <p>Lors de la première année de BTS, nous avons monté et déployé un Logiciel de Gestion de Parc Informatique avec un parc virtuel (routeur, serveur de sauvegarde, PC etc)</p>
+            </div>
+
         </div>
     </div>
 </section>
@@ -244,9 +261,23 @@
         <div class="grid grid-cols-3 gap-8">
             <!-- Carte projet 1 -->
             <div class="bg-white rounded-lg shadow-lg p-6">
-                <h3 class="text-xl font-semibold mb-4">Tailwind</h3>
-                <p>Dans le cadre du développement de mon portfolio ainsi qu'un site vitrine pour Enedis, je me suis interessé à un framework CSS plus modulable et moderne que Bootstrap, Tailwind</p>
-                <a href="https://tailwindcss.com/" target="_blank" class="inline-flex mt-5 items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"></svg>Lien vers la documentation de Tailwindcss</a>
+                <div class="z-10 flex w-6 h-6 ">
+                    <div class="z-10 flex items-right justify-right h-6">
+                        <svg viewBox="0 0 248 31" class="text-slate-900 dark:text-white w-auto h-5"><path fill-rule="evenodd" clip-rule="evenodd" d="M25.517 0C18.712 0 14.46 3.382 12.758 10.146c2.552-3.382 5.529-4.65 8.931-3.805 1.941.482 3.329 1.882 4.864 3.432 2.502 2.524 5.398 5.445 11.722 5.445 6.804 0 11.057-3.382 12.758-10.145-2.551 3.382-5.528 4.65-8.93 3.804-1.942-.482-3.33-1.882-4.865-3.431C34.736 2.92 31.841 0 25.517 0zM12.758 15.218C5.954 15.218 1.701 18.6 0 25.364c2.552-3.382 5.529-4.65 8.93-3.805 1.942.482 3.33 1.882 4.865 3.432 2.502 2.524 5.397 5.445 11.722 5.445 6.804 0 11.057-3.381 12.758-10.145-2.552 3.382-5.529 4.65-8.931 3.805-1.941-.483-3.329-1.883-4.864-3.432-2.502-2.524-5.398-5.446-11.722-5.446z" fill="#38bdf8"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M76.546 12.825h-4.453v8.567c0 2.285 1.508 2.249 4.453 2.106v3.463c-5.962.714-8.332-.928-8.332-5.569v-8.567H64.91V9.112h3.304V4.318l3.879-1.143v5.937h4.453v3.713zM93.52 9.112h3.878v17.849h-3.878v-2.57c-1.365 1.891-3.484 3.034-6.285 3.034-4.884 0-8.942-4.105-8.942-9.389 0-5.318 4.058-9.388 8.942-9.388 2.801 0 4.92 1.142 6.285 2.999V9.112zm-5.674 14.636c3.232 0 5.674-2.392 5.674-5.712s-2.442-5.711-5.674-5.711-5.674 2.392-5.674 5.711c0 3.32 2.442 5.712 5.674 5.712zm16.016-17.313c-1.364 0-2.477-1.142-2.477-2.463a2.475 2.475 0 012.477-2.463 2.475 2.475 0 012.478 2.463c0 1.32-1.113 2.463-2.478 2.463zm-1.939 20.526V9.112h3.879v17.849h-3.879zm8.368 0V.9h3.878v26.06h-3.878zm29.053-17.849h4.094l-5.638 17.849h-3.807l-3.735-12.03-3.771 12.03h-3.806l-5.639-17.849h4.094l3.484 12.315 3.771-12.315h3.699l3.734 12.315 3.52-12.315zm8.906-2.677c-1.365 0-2.478-1.142-2.478-2.463a2.475 2.475 0 012.478-2.463 2.475 2.475 0 012.478 2.463c0 1.32-1.113 2.463-2.478 2.463zm-1.939 20.526V9.112h3.878v17.849h-3.878zm17.812-18.313c4.022 0 6.895 2.713 6.895 7.354V26.96h-3.878V16.394c0-2.713-1.58-4.14-4.022-4.14-2.55 0-4.561 1.499-4.561 5.14v9.567h-3.879V9.112h3.879v2.285c1.185-1.856 3.124-2.749 5.566-2.749zm25.282-6.675h3.879V26.96h-3.879v-2.57c-1.364 1.892-3.483 3.034-6.284 3.034-4.884 0-8.942-4.105-8.942-9.389 0-5.318 4.058-9.388 8.942-9.388 2.801 0 4.92 1.142 6.284 2.999V1.973zm-5.674 21.775c3.232 0 5.674-2.392 5.674-5.712s-2.442-5.711-5.674-5.711-5.674 2.392-5.674 5.711c0 3.32 2.442 5.712 5.674 5.712zm22.553 3.677c-5.423 0-9.481-4.105-9.481-9.389 0-5.318 4.058-9.388 9.481-9.388 3.519 0 6.572 1.82 8.008 4.605l-3.34 1.928c-.79-1.678-2.549-2.749-4.704-2.749-3.16 0-5.566 2.392-5.566 5.604 0 3.213 2.406 5.605 5.566 5.605 2.155 0 3.914-1.107 4.776-2.749l3.34 1.892c-1.508 2.82-4.561 4.64-8.08 4.64zm14.472-13.387c0 3.249 9.661 1.285 9.661 7.89 0 3.57-3.125 5.497-7.003 5.497-3.591 0-6.177-1.607-7.326-4.177l3.34-1.927c.574 1.606 2.011 2.57 3.986 2.57 1.724 0 3.052-.571 3.052-2 0-3.176-9.66-1.391-9.66-7.781 0-3.356 2.909-5.462 6.572-5.462 2.945 0 5.387 1.357 6.644 3.713l-3.268 1.82c-.647-1.392-1.904-2.035-3.376-2.035-1.401 0-2.622.607-2.622 1.892zm16.556 0c0 3.249 9.66 1.285 9.66 7.89 0 3.57-3.124 5.497-7.003 5.497-3.591 0-6.176-1.607-7.326-4.177l3.34-1.927c.575 1.606 2.011 2.57 3.986 2.57 1.724 0 3.053-.571 3.053-2 0-3.176-9.66-1.391-9.66-7.781 0-3.356 2.908-5.462 6.572-5.462 2.944 0 5.386 1.357 6.643 3.713l-3.268 1.82c-.646-1.392-1.903-2.035-3.375-2.035-1.401 0-2.622.607-2.622 1.892z" fill="currentColor"></path></svg>
+                    </div>
+                </div>
+                <p class="mt-4">Dans le cadre du développement de mon portfolio ainsi que d'autres projets, je me suis interessé à un framework CSS plus modulable et moderne que Bootstrap, Tailwind.</p>
+                <a href="./tailwind.html" target="_blank" class="inline-flex mt-5 items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700"><svg class="w-3.5 h-3.5 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20"></svg>En savoir plus</a>
+            </div>
+
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <h3 class="text-xl font-semibold mb-4">Intelligence artificielle</h3>
+                <p>Depuis le début de ma formation, j'ai été poussé à creuser concernant une branche du développement qui m'intéresse tout particulièrement, l'intelligence artificielle.</p>
+            </div>
+
+            <div class="bg-white rounded-lg shadow-lg p-6">
+                <h3 class="text-xl font-semibold mb-4">Environnement de développement intégré (IDE)</h3>
+                <p>Suite à l'utilisation de plusieurs languages dans le cadre de la découverte de ces derniers, j'ai voulu en profitez en testant une multitude d'IDE adapté (ou non) à ces languages.</p>
             </div>
         </div>
     </div>
@@ -266,7 +297,7 @@
                 </a>
             </div>
             <div class="border border-gray-200 rounded-lg p-4">
-                <a href="" class="flex items-center justify-center space-x-2"> <!--target="_blank"-->
+                <a href="tab_syn.pdf" target="_blank" class="flex items-center justify-center space-x-2"> <!--target="_blank"-->
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 fill-current text-black">
                         <path fill-rule="evenodd" d="M6 2a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1v6h5a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm0 2v16h14V9h-4V4H7zm0 7h10v2H7v-2zm0 4h10v2H7v-2z"/>
                     </svg>
